# cocoman_recommender

./: .gitignore  .pylintrc  .travis.yml  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
cocoman_recommender/: containers.py
cocoman_recommender/config/: config.py  consts.py
cocoman_recommender/models/: contents_dto.py  ott_dto.py
cocoman_recommender/routers/: contents_controller.py  crawler_controller.py  genre_recommend_controller.py  ott_controller.py
cocoman_recommender/schemas/: actor.py  base_repository.py  conn.py  contents.py  director.py  genre.py  keyword.py  mixin.py  ott.py  review.py  search_history.py  star_rating.py  user.py
cocoman_recommender/services/: contents_service.py  ott_service.py  recommender_service.py
cocoman_recommender/services/crawler/: justwatch.py  netflix.py
cocoman_recommender/services/data/: genre_eng.py  genre_kor.py  movielens.py  netflix.py
cocoman_recommender/services/dnn_models/: genre_recommender.py
cocoman_recommender/services/dnn_models/example/: genre_recommender.py  rating_recommender.py
crawler/: justwatch.py
data/: movielens.py  netflix.py
models/: genre_recommender.py
models/example/: genre_recommender.py  rating_recommender.py
tests/: cocoman_recommender_test.py  contents_test.py
