[tool.poetry]
name = "cocoman_recommender"
version = "0.1.0"
description = ""
authors = ["als95 <als950901@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.6.8"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"
scikit-learn = "^0.24.1"
tensorflow = "2.2.0"
Keras = "2.4.3"
pandas = "1.1.5"
nltk = "^3.5"
numpy = "1.19.5"
requests = "2.25.1"
selenium = "^3.141.0"
pylint = "^2.7.2"
pylint-sqlalchemy = "^0.2.0"
SQLAlchemy = "^1.4.2"
beautifulsoup4 = "4.9.3"
grpcio = "1.36.0"
pytest = "5.2"
psycopg2-binary = "^2.8.6"
fastapi-utils = "^0.2.1"
pytest-describe = "^1.0.0"
pytest-describe-it = "^0.1.0"
dependency-injector = "^4.31.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
